--- a/app/views/reports/generate.slim
+++ b/app/views/reports/generate.slim
@@ -5,7 +5,7 @@ table style= "width: 100%;"
     th = 'TIME'
     th = 'MARKET'
     th = 'OPEN'
-    th = 'QUANTITY'
+    /th = 'QUANTITY'
     th = 'BUY'
     th = 'SELL'
     th = '%'
@@ -19,7 +19,7 @@ table style= "width: 100%;"
             b = transaction[:name]
           td
             b = transaction[:open]
-          td
+          /td
             b = transaction[:quantity]
           td
             b = transaction[:buy]
@@ -32,11 +32,12 @@ table style= "width: 100%;"
           td = transaction[:time]
           td = transaction[:name]
           td = transaction[:open]
-          td = transaction[:quantity]
+          /td = transaction[:quantity]
           td = transaction[:buy]
           td = transaction[:sell]
           td = transaction[:percentage]
 
+h2 = "Benefit: #{@current_benefit} %"
 
 
 
