Preparing running test 2

--- a/app/views/tests/new.slim
+++ b/app/views/tests/new.slim
@@ -22,7 +22,14 @@ ul
       = 'get_rid_off_after_min '
       = f.text_field :get_rid_off_after_min
     li
+      = 'total_monitor_period_min '
+      = f.text_field :total_monitor_period_min
+    li
+      = 'period_seg '
+      = f.text_field :period_seg
+    li
       = 'quarantine_to_buy_min '
       = f.text_field :quarantine_to_buy_min
+
     li
       = f.submit "Create"
